exports[`Check port reducer FLOWDESIGNER_PORT_ADD properly add the port to the port OrderedMap 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {
    "nodeId": Object {
      "portId": Object {},
    },
  },
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
    "portId": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "portType": "portType",
        "position": Object {
          "x": undefined,
          "y": undefined,
        },
        "properties": Object {
          "type": "EMITTER",
        },
      },
      "id": "portId",
      "nodeId": "nodeId",
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_ADDS to add multiple ports (portId1, portId2) to port collection 1`] = `
Object {
  "childrens": Object {},
  "in": Object {
    "nodeId": Object {
      "portId2": Object {},
    },
  },
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {
    "nodeId": Object {
      "portId1": Object {},
    },
  },
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
    "portId1": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "portType": "portType",
        "position": Object {
          "x": undefined,
          "y": undefined,
        },
        "properties": Object {
          "type": "EMITTER",
        },
      },
      "id": "portId1",
      "nodeId": "nodeId",
    },
    "portId2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "portType": "portType",
        "position": Object {
          "x": undefined,
          "y": undefined,
        },
        "properties": Object {
          "type": "SINK",
        },
      },
      "id": "portId2",
      "nodeId": "nodeId",
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_REMOVE should remove port id1 from ports collection 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_REMOVE_DATA remove type on port id1 on port data map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {},
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_REMOVE_GRAPHICAL_ATTRIBUTES to remove attr on port id1 graphicalAttribute map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_SET_DATA to merge { type: 'string' } on port id1 data map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "string",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;

exports[`Check port reducer FLOWDESIGNER_PORT_SET_GRAPHICAL_ATTRIBUTES to merge { selected: true } on port id1 graphicalAttribute map 1`] = `
Object {
  "childrens": Object {},
  "in": Object {},
  "links": Object {},
  "nodeTypes": Object {},
  "nodes": Object {
    "nodeId": Object {},
  },
  "out": Object {},
  "parents": Object {},
  "ports": Object {
    "id1": Object {
      "data": Object {
        "type": "test",
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
        "selected": true,
        "type": "test",
      },
      "id": "id1",
      "nodeId": undefined,
    },
    "id2": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id2",
      "nodeId": undefined,
    },
    "id3": Object {
      "data": Object {
        "flowType": undefined,
        "properties": Object {},
      },
      "graphicalAttributes": Object {
        "position": Object {
          "x": 10,
          "y": 10,
        },
      },
      "id": "id3",
      "nodeId": undefined,
    },
  },
  "transform": Object {
    "k": 1,
    "x": 0,
    "y": 0,
  },
  "transformToApply": undefined,
}
`;
